# Calculadora_flet

./: README.md  app.py  calc_desing.drawio  pyproject.toml
